Headings in style guide

--- a/app/styles/base/_grids.scss
+++ b/app/styles/base/_grids.scss
@@ -54,47 +54,47 @@ Use html comments `<!--` `-->` if indention is required.
 
 Grid demo: [jsfiddle.net/inuitcss/CLYUC](http://jsfiddle.net/inuitcss/CLYUC)
 
-# Widths
+## Widths
 
 `.one-whole`
 
-## Halves
+### Halves
 
 `.one-half`
 
-## Thirds
+### Thirds
 
 `.one-third`, `.two-thirds`
 
-## Quarters
+### Quarters
 
 `.one-quarter`, `.two-quarters`, `.three-quarters`
 
-## Fifths
+### Fifths
 
 `.one-fifth`, `.two-fifths`, `.three-fifths`, `.four-fifths`
 
-## Sixths
+### Sixths
 
 `.one-sixth`, `.two-sixths`, `.three-sixths`, `.four-sixths`, `.five-sixths`
 
-## Eighths
+### Eighths
 
 `.one-eighth`, `.two-eighths`, `.three-eighths`, `.four-eighths`,
 `.five-eighths`, `.six-eighths`, `.seven-eighths`
 
-## Tenths
+### Tenths
 
 `.one-tenth`, `.two-tenths`, `.three-tenths`, `.four-tenths`, `.five-tenths`,
 `.six-tenths`, `.seven-tenths`, `.eight-tenths`, `.nine-tenths`
 
-## Twelfths
+### Twelfths
 
 `.one-twelfth`, `.two-twelfths`, `.three-twelfths`, `.four-twelfths`,
 `.five-twelfths`, `.six-twelfths`, `.seven-twelfths`, `.eight-twelfths`,
 `.nine-twelfths`, `.ten-twelfths`, `.eleven-twelfths`
 
-# Responsive
+## Responsive
 
 All width can be prefixed with `palm-`. `lap-`, `lap-and-up-`, `portable-`,
 `desk-` or `desk-wide-`
