Test images local

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,55 +4,55 @@
 
 		<div class="hexagon-grid">
 
-			<div class="hexagon hexagon-grid__item" style="background-image:url(http://inspirationfeed.com/wp-content/uploads/2010/06/Evolution_by_will_yen-500x500.png)">
+			<div class="hexagon hexagon-grid__item" style="background-image:url(/images/tmp/Evolution_by_will_yen-500x500.png)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item" style="background-image:url(http://upload.wikimedia.org/wikipedia/en/c/cd/The-catalyst-single-cover-500x500.png)">
+			<div class="hexagon hexagon-grid__item" style="background-image:url(/images/tmp/The-catalyst-single-cover-500x500.png)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item" style="background-image:url(http://designspiration.net/data/l/423341110329_Qy737Vid_l.jpg)">
+			<div class="hexagon hexagon-grid__item" style="background-image:url(/images/tmp/423341110329_Qy737Vid_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item" style="background-image:url(http://coolvectors.com/images/vect/2009/07/500x500.jpg)">
+			<div class="hexagon hexagon-grid__item" style="background-image:url(/images/tmp/500x500.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(http://designspiration.net/data/l/509084866423_rd0gX45i_l.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(/images/tmp/509084866423_rd0gX45i_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(http://designspiration.net/data/l/78223608549_WRxtYYPS_l.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(/images/tmp/78223608549_WRxtYYPS_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(http://inspirationfeed.com/wp-content/uploads/2010/06/Evolution_by_will_yen-500x500.png)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-three" style="background-image:url(/images/tmp/Evolution_by_will_yen-500x500.png)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(http://upload.wikimedia.org/wikipedia/en/c/cd/The-catalyst-single-cover-500x500.png)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(/images/tmp/The-catalyst-single-cover-500x500.png)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(http://designspiration.net/data/l/423341110329_Qy737Vid_l.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(/images/tmp/423341110329_Qy737Vid_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(http://coolvectors.com/images/vect/2009/07/500x500.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-four" style="background-image:url(/images/tmp/500x500.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(http://designspiration.net/data/l/509084866423_rd0gX45i_l.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(/images/tmp/509084866423_rd0gX45i_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(http://designspiration.net/data/l/78223608549_WRxtYYPS_l.jpg)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(/images/tmp/78223608549_WRxtYYPS_l.jpg)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
-			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(http://inspirationfeed.com/wp-content/uploads/2010/06/Evolution_by_will_yen-500x500.png)">
+			<div class="hexagon hexagon-grid__item hexagon-grid__item--hide-lt-five" style="background-image:url(/images/tmp/Evolution_by_will_yen-500x500.png)">
 				<div class="hexagon__inner1"></div>
 				<div class="hexagon__inner2"></div>
 			</div>
